Overflow issues

--- a/css/design.css
+++ b/css/design.css
@@ -1728,6 +1728,7 @@ hr {
   -o-transform: translate3d(-250px, 0, 0);
   -ms-transform: translate3d(-250px, 0, 0);
   transform: translate3d(-250px, 0, 0);
+  overflow: hidden;
 }
 #container.pushed nav {
   -webkit-transform: translate3d(0px, 0, 0);
@@ -1735,6 +1736,7 @@ hr {
   -o-transform: translate3d(0px, 0, 0);
   -ms-transform: translate3d(0px, 0, 0);
   transform: translate3d(0px, 0, 0);
+  overflow: hidden;
 }
 #container.pushed nav h3,
 #container.pushed nav ul {
