--- a/less/_sidemenu.less
+++ b/less/_sidemenu.less
@@ -18,12 +18,14 @@
 #container.pushed {
   .content {
     .transform(translate3d(-250px, 0, 0));
+    overflow: hidden;
   }
   nav {
     .transform(translate3d(0px, 0, 0,));
     h3, ul {
       opacity: 1;
     }
+    overflow: hidden;
   }
 }
 
